--- a/index.html
+++ b/index.html
@@ -92,13 +92,14 @@
         <h3 class="display-5">Hardiwan, S.Pd</h3>
         <h2>Guru Fisika</h2>
         <h2>MAN PANGKEP</h2>
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffffff" fill-opacity="1" d="M0,160L0,224L130.9,224L130.9,128L261.8,128L261.8,96L392.7,96L392.7,224L523.6,224L523.6,128L654.5,128L654.5,160L785.5,160L785.5,224L916.4,224L916.4,128L1047.3,128L1047.3,160L1178.2,160L1178.2,64L1309.1,64L1309.1,64L1440,64L1440,320L1309.1,320L1309.1,320L1178.2,320L1178.2,320L1047.3,320L1047.3,320L916.4,320L916.4,320L785.5,320L785.5,320L654.5,320L654.5,320L523.6,320L523.6,320L392.7,320L392.7,320L261.8,320L261.8,320L130.9,320L130.9,320L0,320L0,320Z"></path></svg> 
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#0d6efd" fill-opacity="1" d="M0,320L0,224L288,224L288,128L576,128L576,224L864,224L864,288L1152,288L1152,192L1440,192L1440,320L1152,320L1152,320L864,320L864,320L576,320L576,320L288,320L288,320L0,320L0,320Z"></path></svg>
+        <!-- <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffffff" fill-opacity="1" d="M0,160L0,224L130.9,224L130.9,128L261.8,128L261.8,96L392.7,96L392.7,224L523.6,224L523.6,128L654.5,128L654.5,160L785.5,160L785.5,224L916.4,224L916.4,128L1047.3,128L1047.3,160L1178.2,160L1178.2,64L1309.1,64L1309.1,64L1440,64L1440,320L1309.1,320L1309.1,320L1178.2,320L1178.2,320L1047.3,320L1047.3,320L916.4,320L916.4,320L785.5,320L785.5,320L654.5,320L654.5,320L523.6,320L523.6,320L392.7,320L392.7,320L261.8,320L261.8,320L130.9,320L130.9,320L0,320L0,320Z"></path></svg>  -->
         
     </section>
     <!-- Akhir Jumbotron  -->
 
     <!-- About -->
-    <section id="about">
+    <!-- <section id="about">
         <div class="container" data-aos="fade-in">
           <div class="row text-center mb-4">
             <div class="col">
@@ -115,7 +116,7 @@
           </div>  
         </div>
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#0d6efd" fill-opacity="1" d="M0,160L48,186.7C96,213,192,267,288,250.7C384,235,480,149,576,138.7C672,128,768,192,864,197.3C960,203,1056,149,1152,138.7C1248,128,1344,160,1392,176L1440,192L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
-    </section>
+    </section> -->
     <!-- Akhir About -->
 
     <!-- Gallery -->
