--- a/xmia1.html
+++ b/xmia1.html
@@ -66,7 +66,15 @@
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle active" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false"><i id="daftar" class="bi bi-pencil-square"></i></a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item p-2 mb-1 bg-secondary text-white text-center" href="xmia1.html"><i class="bi bi-chevron-double-right"></i>   X MIA 1</a></li>
+                <li><a class="dropdown-item p-2 mb-1 text-center" href="xmia1.html">
+                  <button type="button" class="btn btn-primary position-relative">
+                    X MIA 1
+                    <span class="position-absolute top-0 start-100 translate-middle p-2 bg-danger border border-light rounded-circle">
+                      <span class="visually-hidden">New alerts</span>
+                    </span>
+                  </button>
+                  <!-- <span class="badge bg-primary">XII MIA 4</span> -->
+                </a></li>
                 <li><a class="dropdown-item text-center" href="xmia2.html">X MIA 2</a></li>
                 <li><a class="dropdown-item text-center" href="xmia3.html">X MIA 3</a></li>
                 <li><a class="dropdown-item text-center" href="xmia4.html">X MIA 4</a></li>
@@ -103,52 +111,57 @@
                  </div>
                <form name="contact-form">                  
                    <div class="mb-3 text-start">
-                     <label for="Name" class="form-label"><b>Nama Lengkap</b></label><strong><label style="color:rgb(245, 10, 10)">[*]</label></strong>
+                     <label for="Name" class="form-label"><b>Nama Lengkap</b></label><strong><label style="color:rgb(245, 10, 10)">*</label></strong>
                      <select class="form-select" aria-label="Default select example" name="nama" autofocus required>
                        <option selected></option>
-                       <option value="ABNAN APRIADI">1. ABNAN APRIADI</option>
-                       <option value="ADITYA PUTRA PRATAMA">2. ADITYA PUTRA PRATAMA</option>
-                       <option value="ALYA ALFANNY FIRELA">3. ALYA ALFANNY FIRELA</option>
-                       <option value="ANDI MUHAMMAD RIKI">4. ANDI MUHAMMAD RIKI</option>
-                       <option value="ATHIF GHAZY ALI">5. ATHIF GHAZY ALI</option>
-                       <option value="AYU PURNAMA SARI">6. AYU PURNAMA SARI</option>
-                       <option value="DIANDRA AIRA SALSABILA">7. DIANDRA AIRA SALSABILA</option>
-                       <option value="FAJRUL FADHILAH AHQAF">8. FAJRUL FADHILAH AHQAF</option>
-                       <option value="FATHIAN AKBAR">9. FATHIAN AKBAR</option>
-                       <option value="FAUZAN REZKY AL FAHREZA">10. FAUZAN REZKY AL FAHREZA</option>
-                       <option value="INDAH RAHMA YUNI">11. INDAH RAHMA YUNI</option>
-                       <option value="MUH AGUNG">12. MUH AGUNG</option>
-                       <option value="MUH HENDRA RIFALDI">13. MUH HENDRA RIFALDI</option>
-                       <option value="MUH. ARRIFQI ALFALAH ALI">14. MUH. ARRIFQI ALFALAH ALI</option>
-                       <option value="MUH. FARAJ SIRAJA">15. MUH. FARAJ SIRAJA</option>
-                       <option value="MUH. REZKY ARDIANSYAH">16. MUH. REZKY ARDIANSYAH</option>
-                       <option value="MUH. ZAYYAAN ARSYAD">17. MUH. ZAYYAAN ARSYAD</option>
-                       <option value="NADIYAH ZAKIYYAH IDRIS SADIK">18. NADIYAH ZAKIYYAH IDRIS SADIK</option>
-                       <option value="NISWATUNSYAKIRAH">19. NISWATUNSYAKIRAH</option>
-                       <option value="NUR ALIYAH RAMADANI DAHLAN">20. NUR ALIYAH RAMADANI DAHLAN</option>
-                       <option value="NUR ALIYYAH AZ ZAHRA">21. NUR ALIYYAH AZ ZAHRA</option>
-                       <option value="NUR FADHILAH NAIMA">22. NUR FADHILAH NAIMA</option>
-                       <option value="NUR FADHILLAH ARSY">23. NUR FADHILLAH ARSY</option>
-                       <option value="RATU ZAHRA AMELIA">24. RATU ZAHRA AMELIA</option>
-                       <option value="SAFA AL ZENA IBNU NATZA">25. SAFA AL ZENA IBNU NATZA</option>
-                       <option value="SHEARLY ASSYIFA CHARLESH">26. SHEARLY ASSYIFA CHARLESH</option>
-                       <option value="SUCI OKTAVIANI">27. SUCI OKTAVIANI</option>
-                       <option value="ZAHRA DWI ZAHIRA">28. ZAHRA DWI ZAHIRA</option>
-                       <option value="ZAKY KAYANA ANWAR">29. ZAKY KAYANA ANWAR</option>
-                       <option value="ZHIZIE IZZATY HERMAWAN">30. ZHIZIE IZZATY HERMAWAN</option>                        
-                     </select>
+                       <option value="AMELIA ANGGRAENI">1. AMELIA ANGGRAENI</option>
+                       <option value="ANDI ALI">2. ANDI ALI</option>
+                       <option value="ANDRI PRATAMA">3. ANDRI PRATAMA</option>
+                       <option value="AYUDIA RISKA ANWAR">4. AYUDIA RISKA ANWAR</option>
+                       <option value="BASO TAWAKKAL HAMKA">5. BASO TAWAKKAL HAMKA</option>
+                       <option value="CITRA AMELIA TAMRIN">6. CITRA AMELIA TAMRIN</option>
+                       <option value="DATUK ALEXANDRIA AZ-ZAHRA. H">7. DATUK ALEXANDRIA AZ-ZAHRA. H</option>
+                       <option value="DEWI AYULIA">8. DEWI AYULIA</option>
+                       <option value="DWI CITRA MAULIDYA">9. DWI CITRA MAULIDYA</option>
+                       <option value="FUTRI AISYA AWALIA">10. FUTRI AISYA AWALIA</option>
+                       <option value="ILMA KHAERANI AULIA">11. ILMA KHAERANI AULIA</option>
+                       <option value="IRNA NOVIANTI M">12. IRNA NOVIANTI M</option>
+                       <option value="KARIM ASSESEAN UDHIN">13. KARIM ASSESEAN UDHIN</option>
+                       <option value="LAODIYA SINTIA BELLA">14. LAODIYA SINTIA BELLA</option>
+                       <option value="MARYA ULFHIATI">15. MARYA ULFHIATI</option>
+                       <option value="MIFTAHUL HAIRU RAHMADANI">16. MIFTAHUL HAIRU RAHMADANI</option>
+                       <option value="MIRA">17. MIRA</option>
+                       <option value="MUCHLIS">18. MUCHLIS</option>
+                       <option value="MUH. ANIS ADIWANSA FIJRATULLAH">19. MUH. ANIS ADIWANSA FIJRATULLAH</option>
+                       <option value="MUNAWWARA">20. MUNAWWARA</option>
+                       <option value="NANDA RAFIQ AL ZACKY">21. NANDA RAFIQ AL ZACKY</option>
+                       <option value="NATASYA PARADITA">22. NATASYA PARADITA</option>
+                       <option value="NUR ASMA RASYID">23. NUR ASMA RASYID</option>
+                       <option value="NUR IFTITA SHELSYILIA">24. NUR IFTITA SHELSYILIA</option>
+                       <option value="NUR SALSABILA">25. NUR SALSABILA</option>
+                       <option value="NURFADILAH">26. NURFADILAH</option>
+                       <option value="NURFAUZYAH">27. NURFAUZYAH</option>
+                       <option value="NURUL FIQRATUL HURRIYAH">28. NURUL FIQRATUL HURRIYAH</option>
+                       <option value="NURUL HIDAYAH">29. NURUL HIDAYAH</option>
+                       <option value="NURUL HIKMA">30. NURUL HIKMA</option>                        
+                       <option value="NURUL PADILAH PAUSIA">31. NURUL PADILAH PAUSIA</option>                        
+                       <option value="RAHMAT">32. RAHMAT</option>                        
+                       <option value="RAJNABIL ALFAIS">33. RAJNABIL ALFAIS</option>                        
+                       <option value="RISALDI">34. RISALDI</option>                        
+                       <option value="SYAQILA WILDANIAH AMRY">35. SYAQILA WILDANIAH AMRY</option>                        
+                     </select>  
                      <!-- <input type="text" class="form-control" id="name" aria-describedby="name" name="nama"> -->
                    </div>
                    <div class="mb-3">
                      <div class="form-floating mb-3">
-                       <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com" name="email" required>
-                       <label for="floatingInput"><b>Email</b><strong><label style="color:rgb(245, 10, 10)"> [*]</label></strong></label>
+                       <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com" name="email" required autocomplete="off">
+                       <label for="floatingInput"><b>Email</b><strong><label style="color:rgb(245, 10, 10)"> *</label></strong></label>
                      </div>                     
                      <!-- <label for="email" class="form-label">Email</label>
                      <input type="email" class="form-control" id="email" aria-describedby="email" placeholder="example@email.com" name="email"> -->
                    </div>
                    <div class="mb-1 text-start">                        
-                       <label for="pesan" class="form-label"><b>Kehadiran</b></label><strong><label style="color:rgb(245, 10, 10)"> [*]</label></strong>
+                       <label for="pesan" class="form-label"><b>Kehadiran</b></label><strong><label style="color:rgb(245, 10, 10)"> *</label></strong>
                        <select class="form-select" aria-label="Default select example" name="pesan" required>
                          <option selected></option>
                          <option value="Hadir">Hadir</option>
@@ -158,7 +171,7 @@
                        <!-- <textarea class="form-control" id="pesan" rows="3" name="pesan"></textarea> -->
                    </div>                   
                    <div class="mb-3 text-start">
-                   <strong><label style="color:rgb(245, 10, 10)">[*]</label></strong><label style="color:rgb(0, 0, 0)">Wajib Diisi!</label>
+                   <strong><label style="color:rgb(245, 10, 10)">*</label></strong><label style="color:rgb(0, 0, 0)">Wajib Diisi!</label>
                    </div>
                    <button type="submit" class="btn btn-danger btn-kirim">Kirim</button>
                    <button class="btn btn-success btn-loading d-none" type="button" disabled>
